# blind

./: .gitignore  Cargo.toml  Makefile  readme.md
crates/anywhere/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/prpr/: Cargo.toml
crates/prpr/src/: ai.rs  collections.rs  lib.rs  math.rs  owner.rs  rand.rs
crates/prpr_client/: Cargo.toml
crates/prpr_client/src/: console.rs  html.rs  lib.rs  owner.rs  sample.rs
crates/prpr_client/src/html/: canvas.rs  element.rs  mod.rs
crates/prpr_client/src/js/: console.rs  mod.rs
crates/prpr_client/src/js/html/: canvas.rs  element.rs
crates/prpr_client/src/prgl/: buffer.rs  descriptorset.rs  instance.rs  mod.rs  pipeline.rs  raw_type.rs  renderpass.rs  shader.rs  shader_macro.rs  shape.rs  state.rs  texture.rs
crates/prpr_client/src/prgl/core/: buffer.rs  command.rs  descriptorset.rs  executer.rs  mod.rs  pipeline.rs  renderpass.rs  shader.rs  state.rs  surface.rs  template.rs  template_macro.rs  texture.rs  vao.rs
crates/prpr_client/src/prgl/core/raw/: buffer.rs  buffer_object.rs  mod.rs  shader.rs  texture.rs  vao.rs
crates/prpr_client/src/prgl/core/state/: mod.rs  pipeline.rs  sampler.rs
crates/prpr_client/src/prgl/factory/: mod.rs  shape.rs
crates/prpr_client/src/prgl/raw/: attribute.rs  buffer.rs  mod.rs  shader.rs  shader_macro.rs  state.rs  template.rs  template_macro.rs  vao.rs
crates/prpr_client/src/prgl/recipe/: mod.rs  object.rs
crates/prpr_client/src/prgl/recipe/common/: buffer.rs  mod.rs  texture.rs
crates/prpr_client/src/prgl/recipe/per_pipeline/: material.rs  mesh.rs  mod.rs  transform.rs
crates/prpr_client/src/prgl/recipe/per_pipeline/mesh/: fullscreen.rs  grid.rs  mod.rs  shape.rs
crates/prpr_client/src/prgl/recipe/per_renderpass/: camera.rs  mod.rs  screen.rs  surface.rs
crates/prpr_client/src/prgl/template/: camera.rs  mod.rs
crates/prpr_client/src/prhtml/: instance.rs  mod.rs
crates/prpr_client/src/prhtml/core/: box_content.rs  floatingbox.rs  font_awesome.rs  mod.rs  pane.rs  style.rs  text.rs  traits.rs
crates/prpr_client/src/prhtml/core/raw/: holder.rs  internal_types.rs  mod.rs  style.rs
crates/prpr_client/src/sample/: mod.rs
crates/prpr_client/src/scene/: mod.rs
crates/prpr_client/src/system/: core.rs  event.rs  input.rs  layers.rs  log.rs  mod.rs  screen.rs  time.rs  updater.rs  why.rs
crates/prpr_client/src/world/: full_screen_layers.rs  mod.rs
crates/prpr_server/: Cargo.toml
crates/prpr_server/src/: const_params.rs  html.rs  lib.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: const_params.rs  html.rs  lib.rs  sandbox.rs  server.rs
crates/wasm/: Cargo.toml
docs/: spec.md
example/: Makefile
example/anywhere/: Cargo.toml
example/client/: Cargo.toml
example/client/src/: lib.rs
example/common/: Cargo.toml
example/hoge/: Cargo.toml  Makefile
example/hoge/hoge/: Cargo.toml
example/hoge/hoge_client/: Cargo.toml
example/hoge/hoge_server/: Cargo.toml
example/hoge_client/: Cargo.toml
example/hoge_client/src/: lib.rs
example/hoge_server/: Cargo.toml
example/hoge_server/src/: main.rs
example/server/: Cargo.toml
example/server/src/: main.rs  store.rs
example/template/: Makefile
example/template/minimal/: Cargo.toml
example/template/minimal_client/: Cargo.toml
example/wasm/: Cargo.toml
impl/client/: Cargo.toml
impl/server/: Cargo.toml
src/: main.rs
(+5 files in other folders)
