[package]
name = "prpr-client"
version = "0.1.0"
edition = "2021"

[dependencies]
prpr = { path = "../prpr" }
assert-type-eq = "0.1.0"
js-sys = "0.3.55"
once_cell = "1.9.0"

[dependencies.wasm-bindgen]
version = "0.2.63"
features = [
  "serde-serialize"
]

[dependencies.web-sys]
version = "0.3.55"
features = [
  # Objects
  'Document',
  'Element',
  'Node',
  'Text',
  'Window',
  "Screen",
  "console",
  "CssStyleDeclaration",
  "CanvasRenderingContext2d",
  "ImageBitmap",
  "ImageData",
  # HTML
  'HtmlElement',
  'HtmlDivElement',
  'HtmlCanvasElement',
  "HtmlStyleElement",
  "HtmlImageElement",
  "HtmlVideoElement",
  # WebGL
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "WebGlTexture",
  "WebGlSampler",
  "WebGlTransformFeedback",
  "WebGlVertexArrayObject",
  "WebGlSync",
  "WebGlQuery",
  "WebGlActiveInfo",
  "WebGlUniformLocation",
  "WebGlShaderPrecisionFormat",
  "WebGlContextAttributes",
]
