[package]
name = "hoge-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hoge = { path = "../hoge" }
prpr-client = { path = "../../crates/prpr_client" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# [features]
# default = ["console_error_panic_hook"]
# console_error_panic_hook = { version = "0.1.6", optional = true }
# wee_alloc = { version = "0.4.5", optional = true }
# [dev-dependencies]
# wasm-bindgen-test = "0.3.13"
[profile.release]
opt-level = "s"
